# invoice-nudge

./: README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  start.py
backend/alembic/: env.py
backend/src/: config.py  database.py
backend/src/api/: app.py  dependencies.py
backend/src/api/middleware/: logging_middleware.py  rate_limit.py
backend/src/api/routes/: auth.py  billing.py  health.py  routes.py
backend/src/models/: __init__.py  base.py  models.py  user.py
backend/src/schemas/: __init__.py  auth.py  schemas.py
backend/src/services/: auth_service.py  email_service.py  service.py  stripe_service.py
backend/src/tasks/: scheduler.py
backend/tests/: conftest.py  test_api.py  test_auth.py
frontend/: .env.production  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/clients/: page.tsx
frontend/app/dashboard/resources/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/login/: page.tsx
frontend/app/pricing/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/ui/: button.tsx  card.tsx  google-button.tsx  input.tsx  modal.tsx  pagination.tsx  skeleton.tsx  table.tsx
frontend/lib/: api.ts  auth.ts  constants.ts  hooks.ts  types.ts
